opam-version: "2.0"
name: "satysfi-fonts-han-sans-jp-doc"
version: "2.003R"
synopsis: "Document of SATySFi Font Package for han sans JP fonts"
description: """
Document package for satysfi-fonts-han-sans-jp
"""
maintainer: "Naoki Kaneko <puripuri2100@gmail.com>"
authors: "Naoki Kaneko <puripuri2100@gmail.com>"
license: "CC0-1.0"
homepage: "https://github.com/puripuri2100/SATySFi-fonts-han-sans-jp"
bug-reports: "https://github.com/puripuri2100/SATySFi-fonts-han-sans-jp/issues"
dev-repo: "git+https://github.com/puripuri2100/SATySFi-fonts-han-sans-jp.git"
depends: [
  "satysfi" {>= "0.0.5" & < "0.0.7"}
  "satyrographos" {>= "0.0.2" & < "0.0.3"}
  "satysfi-dist"
  "satysfi-fonts-han-sans-jp" { = "%{version}%" }
  "satysfi-lipsum"
]
build: [
  ["satyrographos" "opam" "build"
    "--name" "fonts-han-sans-jp-doc"
    "--prefix" "%{prefix}%"
    "--script" "%{build}%/Satyristes"]
]
install: [
  ["satyrographos" "opam" "install"
    "--name" "fonts-han-sans-jp-doc"
    "--prefix" "%{prefix}%"
    "--script" "%{build}%/Satyristes"]
]
